v1 of wedding video page, issue with video width on mobile

--- a/wedding-video/wedding-video.sass
+++ b/wedding-video/wedding-video.sass
@@ -1,45 +1,120 @@
+// Variables
+$font-primary: 'Alegreya Sans', Helvetica, sans-serif
 $bg-blue: #2c4e7a
 $bg-blue-dark: #1c314d
+$off-white: #f9f9f9
+$silver: #c2c2c2
+
+*
+	-webkit-box-sizing: border-box
+	-moz-box-sizing: border-box
+	box-sizing: border-box
 
 body
+	font-family: $font-primary
+	font-weight: 400
 	margin: 0
 	padding: 0
 
 .video--wrapper
-	position: relative
 	display: block
+	position: relative
 	background: $bg-blue
 	text-align: center
 	-webkit-box-shadow: inset 0 0 10em $bg-blue-dark
 	-moz-box-shadow: inset 0 0 10em $bg-blue-dark
-	-ms-box-shadow: inset 0 0 10em $bg-blue-dark
 	box-shadow: inset 0 0 10em $bg-blue-dark
 	width: 100%
 	height: 100vh
 
 	*
-		color: #fff
+		color: $off-white
 
-	.video__nav
-		list-style: none
-		margin: 0
-		padding: 0
+	.videos__container
+		position: absolute
+		top: 50%
+		left: 50%
+		-webkit-transform: translate(-50%, -50%)
+		-moz-transform: translate(-50%, -50%)
+		transform: translate(-50%, -50%)
 
-		a
-			color: inherit
-			text-decoration: none
-			padding: 5px 10px
+		.videos__nav
+			list-style: none
+			margin: 0 0 30px
+			padding: 0
 
-	.video__container
-		display: inline-block
-		background: #f7f7f7
-		border: 4px solid $bg-blue-dark
-		border-radius: 2px
-		margin: 0 auto
-		padding: 10px
+			li
+				display: inline-block
 
-		.video
-			display: none
+			a
+				display: inline-block
+				position: relative
+				color: inherit
+				text-decoration: none
+				text-transform: uppercase
+				letter-spacing: 2px
+				margin: 0 5px
+				padding: 5px 10px
 
-			&.show
-				display: initial
+				&:after
+					content: ''
+					position: absolute
+					left: 0
+					bottom: 0
+					background: $silver
+					width: 0
+					height: 4px
+					-webkit-transition: width .4s ease
+					-moz-transition: width .4s ease
+					transition: width .4s ease
+
+		.videos__content
+			background: $off-white
+			border: 8px solid $silver
+			border-radius: 4px
+			-webkit-box-shadow: 0 0 10px $bg-blue-dark
+			-moz-box-shadow: 0 0 10px $bg-blue-dark
+			box-shadow: 0 0 10px $bg-blue-dark
+			padding: 20px
+
+			.video
+				iframe
+					width: 600px
+					height: 337px
+
+// hover state for nav items
+@media screen and (min-width: 768px)
+	.video--wrapper
+		.videos__container
+			.videos__nav
+				a:hover
+					&:after
+						width: 100%
+
+
+@media screen and (max-width: 767px)
+	.video--wrapper
+		.videos__container
+			.videos__nav
+				margin: 0 0 15px
+
+				li
+					display: block
+
+			.videos__content
+				border: 4px solid $silver
+				padding: 10px
+
+				.video
+					iframe
+						width: 425px
+						height: 239px
+
+@media screen and (max-width: 480px)
+	.video--wrapper
+		.videos__container
+			.videos__content
+				.video
+					iframe
+						width: 275px
+						height: 155px
